<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heading_height"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="#FBFBFB"
        android:textSize="@dimen/headind_tsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <ImageButton
        android:id="@+id/imageBut_guide3"
        android:layout_width="@dimen/car_image_width"
        android:layout_height="@dimen/car_image_height"
        android:background="@color/purple_200"
        android:contentDescription="@string/click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/keyboard_arrow_left" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="@dimen/category_textwidth"
        android:layout_height="@dimen/category_textheight"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/category_1"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textSize="@dimen/category1_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageBut_guide3"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.194" />


    <ImageButton
        android:id="@+id/imageBut_guide"
        android:layout_width="@dimen/car_image_width"
        android:layout_height="@dimen/car_image_height"
        android:background="@color/purple_200"
        android:contentDescription="@string/click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.550"
        app:srcCompat="@drawable/keyboard_arrow_left" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/category_textwidth"
        android:layout_height="@dimen/category_textheight"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/category_1"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textSize="@dimen/category1_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageBut_guide3"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.45" />

    <ImageButton
        android:id="@+id/imageBut_guide2"
        android:layout_width="@dimen/car_image_width"
        android:layout_height="@dimen/car_image_height"
        android:background="@color/purple_200"
        android:contentDescription="@string/click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        app:srcCompat="@drawable/keyboard_arrow_left" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/category_textwidth"
        android:layout_height="@dimen/category_textheight"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/category_1"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textSize="@dimen/category1_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageBut_guide3"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.693" />


    <Button
        android:id="@+id/button3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="87dp"
        android:layout_height="57dp"
        android:contentDescription="@string/add_button"
        android:drawableEnd="@drawable/double_arrow"
        android:text=""
        android:textColor="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="87dp"
        android:layout_height="57dp"
        android:contentDescription="@string/add_button"
        android:drawableEnd="@drawable/double_arrow"
        android:text=""
        android:textColor="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="87dp"
        android:layout_height="57dp"
        android:contentDescription="@string/add_button"
        android:drawableEnd="@drawable/double_arrow"
        android:text=""
        android:textColor="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
